==> yukina0079/Omni-Directional-Infantry-Robot/02.嵌入式/02.软件代码/New_rtos版本/freertos/00.遥控器/Drivers/BSP/NRF24L01/NRF24L01.c <==
#include "nrf24L01.h"
#include "led.h"
#include "delay.h"
#define ADDR_AB_LEN    5   // 与库函数TX_ADR_WIDTH=5一致
#define ADDR_BC_LEN    5   // 与库函数TX_ADR_WIDTH=5一致
#define DATA_WIDTH     13  // 与库函数TX_PLOAD_WIDTH=32一致
#define CH_AB          30  // A-B通信频道
#define CH_BC          40  // B-C通信频道

void NRF24L01_Init(void)
{
		SPI1_handle.Instance = SPI2;
		SPI1_handle.Init.Mode = SPI_MODE_MASTER;//指定SPI操作模式。
		SPI1_handle.Init.Direction = SPI_DIRECTION_2LINES;//指定SPI双向模式状态。
		SPI1_handle.Init.DataSize = SPI_DATASIZE_8BIT;//指定SPI数据大小。
		SPI1_handle.Init.CLKPolarity = SPI_POLARITY_LOW;//指定串行时钟稳定状态。
		SPI1_handle.Init.CLKPhase = SPI_PHASE_1EDGE;//指定位捕获的时钟活动沿。
		SPI1_handle.Init.NSS = SPI_NSS_SOFT;//指定NSS信号是否由管理硬件（NSS引脚）或使用SSI位的软件。	//自定义引脚
		SPI1_handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256;//指定波特率预分频器值，该值将为用于配置发送和接收SCK时钟。
		SPI1_handle.Init.FirstBit = SPI_FIRSTBIT_MSB;//指定数据传输是从MSB还是LSB位开始
		SPI1_handle.Init.TIMode = SPI_TIMODE_DISABLE;//指定是否启用TI模式。
		SPI1_handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;//指定是否启用CRC计算。
		SPI1_handle.Init.CRCPolynomial = 7;//指定用于CRC计算的多项式。
		HAL_SPI_Init(&SPI1_handle);
}

uint8_t NRF24L01_Write_Reg(uint8_t reg,uint8_t value)
{
    uint8_t status;	
  NRF24L01_SPI_CS_ENABLE();                 //使能SPI传输
  status =SPI_RT_byte(reg);   //发送寄存器号 
  SPI_RT_byte(value);         //写入寄存器的值
  NRF24L01_SPI_CS_DISABLE();                //禁止SPI传输	   
  return(status);       			//返回状态值
}

uint8_t NRF24L01_Read_Reg(uint8_t reg)
{
	uint8_t reg_val;	    
 	NRF24L01_SPI_CS_ENABLE();          //使能SPI传输		
  SPI_RT_byte(reg);   //发送寄存器号
  reg_val=SPI_RT_byte(0XFF);//读取寄存器内容
  NRF24L01_SPI_CS_DISABLE();          //禁止SPI传输		    
  return(reg_val);           //返回状态值
}

uint8_t NRF24L01_Read_Buf(uint8_t reg,uint8_t *pBuf,uint8_t len)
{
	uint8_t status,uint8_t_ctr;	   
  
  NRF24L01_SPI_CS_ENABLE();           //使能SPI传输
  status=SPI_RT_byte(reg);//发送寄存器值(位置),并读取状态值   	   
 	for(uint8_t_ctr=0;uint8_t_ctr<len;uint8_t_ctr++)
  {
    pBuf[uint8_t_ctr]=SPI_RT_byte(0XFF);//读出数据
  }
  NRF24L01_SPI_CS_DISABLE();       //关闭SPI传输
  return status;        //返回读到的状态值
}

uint8_t NRF24L01_Write_Buf(uint8_t reg, uint8_t *pBuf, uint8_t len)
{
	uint8_t status,uint8_t_ctr;	    
 	NRF24L01_SPI_CS_ENABLE();          //使能SPI传输
  status = SPI_RT_byte(reg);//发送寄存器值(位置),并读取状态值
  for(uint8_t_ctr=0; uint8_t_ctr<len; uint8_t_ctr++)
  {
    SPI_RT_byte(*pBuf++); //写入数据	 
  }
  NRF24L01_SPI_CS_DISABLE();       //关闭SPI传输
  return status;          //返回读到的状态值
}

uint8_t NRF24L01_TxPacket(uint8_t *txbuf)
{
	uint8_t sta; 
	NRF24L01_CE_LOW();
    NRF24L01_Write_Buf(WR_TX_PLOAD,txbuf,TX_PLOAD_WIDTH);//写数据到TX BUF  32个字节
 	NRF24L01_CE_HIGH();//启动发送	 
  
	while(NRF24L01_IRQ_PIN_READ()!=0);//等待发送完成
  
	sta=NRF24L01_Read_Reg(STATUS);  //读取状态寄存器的值	   
	NRF24L01_Write_Reg(NRF_WRITE_REG+STATUS,sta); //清除TX_DS或MAX_RT中断标志
	if(sta&MAX_TX)//达到最大重发次数
	{
		NRF24L01_Write_Reg(FLUSH_TX,0xff);//清除TX FIFO寄存器 
		return MAX_TX; 
	}
	if(sta&TX_OK)//发送完成
	{
		return TX_OK;
	}
	return 0xff;//其他原因发送失败
}

void NRF24L01_RX_Mode(void)
{
  NRF24L01_CE_LOW();	  
  NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG, 0x0F);//配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC 
  NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);    //使能通道0的自动应答    
  NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01);//使能通道0的接收地址  	 
  NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);	     //设置RF通信频率		  
  NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);//设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
  NRF24L01_Write_Reg(NRF_WRITE_REG+RX_PW_P0,RX_PLOAD_WIDTH);//选择通道0的有效数据宽度 	       
  NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(uint8_t*)RX_ADDRESS,RX_ADR_WIDTH);//写RX节点地址
  NRF24L01_CE_HIGH(); //CE为高,进入接收模式 
  HAL_Delay(1);
}

void NRF24L01_TX_Mode(void)
{														 
  NRF24L01_CE_LOW();	    
  NRF24L01_Write_Buf(NRF_WRITE_REG+TX_ADDR,(uint8_t*)TX_ADDRESS,TX_ADR_WIDTH);//写TX节点地址 
  NRF24L01_Write_Buf(NRF_WRITE_REG+RX_ADDR_P0,(uint8_t*)RX_ADDRESS,RX_ADR_WIDTH); //设置TX节点地址,主要为了使能ACK	  
  NRF24L01_Write_Reg(NRF_WRITE_REG+EN_AA,0x01);     //使能通道0的自动应答    
  NRF24L01_Write_Reg(NRF_WRITE_REG+EN_RXADDR,0x01); //使能通道0的接收地址  
  NRF24L01_Write_Reg(NRF_WRITE_REG+SETUP_RETR,0xff);//设置自动重发间隔时间:4000us + 86us;最大自动重发次数:15次
  NRF24L01_Write_Reg(NRF_WRITE_REG+RF_CH,40);       //设置RF通道为40
  NRF24L01_Write_Reg(NRF_WRITE_REG+RF_SETUP,0x0f);  //设置TX发射参数,0db增益,2Mbps,低噪声增益开启   
  NRF24L01_Write_Reg(NRF_WRITE_REG+CONFIG,0x0e);    //配置基本工作模式的参数;PWR_UP,EN_CRC,16BIT_CRC,接收模式,开启所有中断
  NRF24L01_CE_HIGH();//CE为高,10us后启动发送
  HAL_Delay(1);
}
